[project]
name = "intrusion-openenv"
version = "0.1.0"
description = "Intrusion Detection OpenEnv"
authors = [{ name = "Sandesh" }]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "app:app"

[tool.openenv]
entry_point = "app:app"